Update research page with new publications and reorganize categories

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,9 +1,22 @@
 ---
 layout: archive
-title: "Publications"
+title: "Research"
 permalink: /publications/
 author_profile: true
 ---
+
+## Research Interests
+
+My research focuses on [YOUR RESEARCH AREAS HERE - e.g., statistical machine learning, computational statistics, etc.].
+
+I am particularly interested in:
+- [Interest area 1]
+- [Interest area 2]
+- [Interest area 3]
+
+---
+
+## Publications
 
 {% if site.author.googlescholar %}
   <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
