--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -7,25 +7,21 @@ author_profile: true
 
 ## Research Interests
 
-My research focuses on [YOUR RESEARCH AREAS HERE - e.g., statistical machine learning, computational statistics, etc.].
+My research interests span across interacting particle systems and data-driven optimal transport.
 
-I am particularly interested in:
-- [Interest area 1]
-- [Interest area 2]
-- [Interest area 3]
+In particular, currently my works focus on:
 
----
-
-## Publications
-
+- Limit theorems for mean-field and weakly interacting queueing systems
+- Generative modeling via optimal transport or Schrödinger bridges
+<!-- 
 {% if site.author.googlescholar %}
   <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
 {% endif %}
 
-{% include base_path %}
+{% include base_path %} -->
 
 <!-- New style rendering if publication categories are defined -->
-{% if site.publication_category %}
+<!-- {% if site.publication_category %}
   {% for category in site.publication_category  %}
     {% assign title_shown = false %}
     {% for post in site.publications reversed %}
@@ -43,7 +39,19 @@ I am particularly interested in:
   {% for post in site.publications reversed %}
     {% include archive-single.html %}
   {% endfor %}
-{% endif %}
+{% endif %} -->
+
+---
+
+## Publications & Preprints
 
 
+- <strong>Chen, Y.-H.</strong>, Liu, H. (2026+). Neural Solver for Wasserstein Geodesics and Optimal Transport Dynamic. *Submitted to Journal of Scientific Computing*.
 
+- <strong>Chen, Y.-H.</strong>, Ghosh, A., Wu, R. (2026+). Limit Theorems for Heterogeneous Graphon JSQ(d) Model. *Near Completion*.
+
+- Thorn, S., Chao, A., Georgiev, K.B., Müller, J., Bässler, C., Campbell, J.L., Castro, J., <strong>Chen, Y.-H.</strong>, et al. (2020). Estimating retention benchmarks for salvage logging to protect biodiversity. *Nature Communications*, 11, 4243. [[Journal]](https://www.nature.com/articles/s41467-020-18612-4)
+
+- Thorn, S., Chao, A., Bernhardt-Römermann, M., <strong>Chen, Y.-H.</strong>, et al. (2020). Rare Species, Functional Groups, and Evolutionary Lineages Drive Successional Trajectories in Disturbed Forests. *Ecology*, 101(3), e02949. [[Journal]](https://esajournals.onlinelibrary.wiley.com/doi/full/10.1002/ecy.2949)
+
+- Georgiev, K.B., Chao, A., Castro, J., <strong>Chen, Y.-H.</strong>, et al. (2019). Salvage logging changes the taxonomic, phylogenetic and functional successional trajectories of forest bird communities. *Journal of Applied Ecology*, 56(10), 2492-2504. [[Journal]](https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/1365-2664.13482)
